--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 " alt="">
                 <h3>Hot wings challenge</h3>
                 <p>
-                    But my best skill is actually in eating hot wings. I am the undisputed queen of hot wing challenges. Ghost Peppers and Carolina Reapers are my favorite snacks.
+                    But my best skill is actually in eating hot wings. I am the undisputed king of hot wing challenges. Ghost Peppers and Carolina Reapers are my favorite snacks.
                 </p>
             </div>
         </div>
