--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
         </div>
     </div>
     <div class="footer">
-        <a href="#" class="link">LinkedIn</a>
-        <a href="#" class="link">Github</a>
+        <a href="https://www.linkedin.com/in/ankit-ghosal-148863205/" class="link">LinkedIn</a>
+        <a href="https://github.com/ankitbhoi" class="link">Github</a>
         <a href="#" class="link">Twitter</a>
         <p class="copyright">&#169;	 2022 ANKIT GHOSAL</p>
     </div>
